2025-09-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test17-insert-directory):
	* tramp-tests.el (tramp-test17-insert-directory): Use `seq-union'.
	(tramp-test42-utf8): Use `seq-uniq' and `tramp-compat-seq-keep'.

2025-09-14  Mattias Engdegård  <mattias.engdegard@gmail.com>

	* tramp-tests.el: Silence function-quoting warning.

2025-09-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test16-file-expand-wildcards)
	(tramp-test26-interactive-file-name-completion):
	Prefer #'string-lessp over 'string<.
	(tramp--test-ange-ftp-p, tramp-test47-read-password)
	(tramp-test47-read-otp-password): Use function read syntax.

2025-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (completions-max-height): Declare.
	(tramp-test26-interactive-file-name-completion): Extend test.

2025-08-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.2 released

2025-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (edebug-mode): Declare.
	(tramp--test-message): Write also trace value.
	(tramp-test26-file-name-completion):
	(tramp-test26-interactive-file-name-completion): Extend tests.

2025-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test48-session-timeout): Extend test.

2025-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test22-file-times): Adapt test.

2025-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test50-auto-load)
	(tramp-archive-test50-delay-load)
	(tramp-archive-test51-without-remote-files): Rename.

	* tramp-tests.el (tramp--test-operation)
	(tramp--handler-for-test-operation): New defuns.
	(tramp-test49-external-backend-function): New test.
	(tramp-test50-auto-load, tramp-test50-delay-load)
	(tramp-test50-recursive-load, tramp-test50-remote-load-path)
	(tramp-test51-without-remote-files, tramp-test52-unload): Rename.
