@@ -5045,11 +5045,12 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
     (when tramp-trace
       (when (get-buffer trace-buffer) (kill-buffer trace-buffer))
       (dolist
-	  (elt (mapcar #'intern (all-completions "tramp-" obarray #'functionp)))
+	  (elt
+	   (append
+	    (mapcar #'intern (all-completions "tramp-" obarray #'functionp))
+	    '(completion-file-name-table read-file-name)))
 	(unless (get elt 'tramp-suppress-trace)
-	  (trace-function-background elt)))
-      (trace-function-background #'completion-file-name-table)
-      (trace-function-background #'read-file-name))
+	  (trace-function-background elt))))
 
     (unwind-protect
         (dolist (syntax (if (tramp--test-expensive-test-p)
@@ -5196,11 +5197,10 @@ This tests also `make-symbolic-link', `file-truename' and `add-name-to-file'."
                     (discard-input)
                     (setq test (car test-and-result)
                           unread-command-events
-			  (append test '(tab tab return return))
+			  (append test (if noninteractive '(tab tab)
+			   		 '(tab tab return)))
                           completions nil
-                          result
-			  (read-file-name
-			   "Prompt: " nil nil 'confirm nil predicate))
+                          result (read-file-name ": " nil nil nil nil predicate))
 
                     (if (or (not (get-buffer "*Completions*"))
 			    (string-match-p
